--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
     username: root
     password:
     driver-class-name: org.mariadb.jdbc.Driver
+  thymeleaf:
+    cache: false
+    prefix: file:src/main/resources/templates/
   jpa:
     hibernate:
       ddl-auto: create
